# elio-dao-protocol

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  init.sh  test.sh
cli/: Cargo.toml
cli/src/: main.rs
contracts/assets/: Cargo.toml  README.md
contracts/assets/.fleet/: run.json
contracts/assets/src/: README.md  error.rs  events.rs  hooks.rs  interface.rs  lib.rs  test.rs  types.rs
contracts/core/: Cargo.toml  README.md
contracts/core/src/: error.rs  events.rs  hooks.rs  interface.rs  lib.rs  test.rs  types.rs
contracts/hookpoints/: Cargo.toml  README.md
contracts/hookpoints/src/: interface.rs  lib.rs  test.rs
contracts/votes/: Cargo.toml  README.md
contracts/votes/src/: error.rs  events.rs  hooks.rs  interface.rs  lib.rs  test.rs  types.rs
wasm/: elio_assets.wasm  elio_core.wasm  elio_hookpoints.wasm  elio_votes.wasm
