[package]
name = "elio-votes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
#elio-core = { path = "../core/", artifact = "cdylib", target = "wasm32-unknown-unknown"}

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
#elio-assets = { path = "../assets/", artifact = "cdylib", target = "wasm32-unknown-unknown"}

[features]
testutils = ["soroban-sdk/testutils"]
